add archive CRUD, local ingestor, fix English text pipeline
- IngestController: full CRUD for archives at /api/ingest/archives
  (GET list, GET by id, POST create, PUT update, DELETE)
- JobService: copy text_raw → text_en for English records so the UI
  shows OCR text without needing translation
- ingest-local/ingest.py: interactive script to upload local JPG scans
  or zip files into the archiver pipeline
- Update CLAUDE.md with current architecture